PIP-435 Removed redundant default Swagger values and moved them to properties file for better configurability. Fixed security issue by making cookies HTTP-only and adjusted logging in CacheController. Added jdeb Maven plugin profile for Debian package creation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name            =snomed-sso-service
+# ----------------------------------------
+swagger.title                      =SNOMED International SSO Service
+swagger.description                =SNOMED International ID & SSO Service
+swagger.version                    =2.0
+swagger.license                    =Apache 2.0
+swagger.licenseUrl                 =https//www.apache.org/licenses/LICENSE-2.0.html
+swagger.contact                    =support@ihtsdo.org
+# ----------------------------------------
 server.port                        =8080
 spring.cache.jcache.config         =classpath:ehcache.xml
 springdoc.writer-with-order-by-keys=true
-# ----------------------------------------
 
 cookie.name                        =dev-ims-ihtsdo
 # Cookie expires after 3 days as default
@@ -35,3 +42,38 @@ spring.cloud.vault.enabled         =false
 #spring.cloud.vault.kv.enabled     =true
 #spring.config.import              =consul:localhost:8500,vault://
 #spring.cloud.vault.uri            =http://localhost:8200
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
