--- a/pom.xml
+++ b/pom.xml
@@ -256,4 +256,51 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>deb</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.vafer</groupId>
+                        <artifactId>jdeb</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jdeb</goal>
+                                </goals>
+                                <configuration>
+                                    <deb>${project.build.directory}/${packageName}-${project.version}-all.deb</deb>
+                                    <controlDir>${basedir}/src/deb/control</controlDir>
+                                    <snapshotExpand>true</snapshotExpand>
+                                    <snapshotEnv>BUILD_NUMBER</snapshotEnv>
+                                    <verbose>true</verbose>
+                                    <classifier>all</classifier>
+                                    <signPackage>false</signPackage>
+                                    <dataSet>
+                                        <data>
+                                            <src>${project.build.directory}/${project.build.finalName}.jar</src>
+                                            <dst>${packageName}.jar</dst>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/opt/${packageName}/</prefix>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>${basedir}/src/deb/supervisor.conf</src>
+                                            <dst>/etc/supervisor/conf.d/${packageName}.conf</dst>
+                                            <type>file</type>
+                                        </data>
+                                    </dataSet>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
